syntax = "proto3";

option go_package = "github.com/divilla/eop09/entityproto";

package entityproto;

service RPC {
  rpc Index (IndexRequest) returns (IndexResponse) {}
  rpc Get (KeyRequest) returns (Entity) {}
  rpc Create (Entity) returns (CommandResponse) {}
  rpc Patch (KeyEntityRequest) returns (CommandResponse) {}
  rpc Put (KeyEntityRequest) returns (CommandResponse) {}
  rpc Delete (KeyRequest) returns (CommandResponse) {}
  rpc Import (stream Entity) returns (ImportResponse) {}
}

message Entity {
  bytes json = 1;
}

message IndexRequest {
  int64 currentPage = 1;
  int64 perPage = 2;
}

message KeyRequest {
  string key = 1;
}

message KeyEntityRequest {
  string key = 1;
  bytes json = 2;
}

message IndexResponse {
  repeated Entity results = 1;
  int64 currentPage = 2;
  int64 perPage = 3;
  int64 totalCount = 4;
  int64 pageCount = 5;
}

message CommandResponse {
  int64 rowsAffected = 1;
}

message ImportResponse {
  bool success = 1;
  int64 rowsAffected = 2;
  bytes errors = 3;
}
